--- a/index.html
+++ b/index.html
@@ -12,22 +12,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>3kh0 lite</title>
   </head>
-  <body style="background-color: #121212; color: #ffffff; font-family: sans-serif; margin: 0; padding: 0; display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100vh;">
-    <h1 style="font-size: 3em; text-align: center;">
-      3kh0 lite
-    </h1>
+  <body style="background-color: #121212; color: #ffffff; font-family: sans-serif; margin: 0; padding: 0; display: flex; flex-direction: column; align-items: center; justify-content: center; min-height: 100vh;">
+    <h1 style="font-size: 3em; text-align: center;">3kh0 lite</h1>
     <span id="subtitle" style="font-size: 1.5em;">...</span>
     <p style="text-align: center; max-width: 600px; margin: 20px auto;">
       Welcome to 3kh0 lite, a lightweight, lightning fast, and simple game site.<br />
-      <a href="/projects.html" style="text-decoration: none;"><button style="cursor: pointer; background-color: #22c55e; border: none; color: white; padding: 15px 32px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; border-radius: 20px; margin-top: 20px;">Start playing!</button></a><br />
-      <br />
-      <a href="/misc.html" style="text-decoration: none;"><button style="cursor: pointer; background-color: #b625cc; border: none; color: white; padding: 15px 32px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; border-radius: 20px; margin-top: 5px;">Tools and settings</button></a>
+      <!-- Replace the link with a button for dynamic loading -->
+      <button id="startGameBtn" style="cursor: pointer; background-color: #22c55e; border: none; color: white; padding: 15px 32px; text-align: center; font-size: 16px; border-radius: 20px; margin-top: 20px;">
+        Start playing!
+      </button><br /><br />
+      <a href="/misc.html" style="text-decoration: none;">
+        <button style="cursor: pointer; background-color: #b625cc; border: none; color: white; padding: 15px 32px; text-align: center; font-size: 16px; border-radius: 20px; margin-top: 5px;">Tools and settings</button>
+      </a>
     </p>
+
+    <!-- Container for game content -->
+    <div id="gameContainer" style="display:none; width: 100%; max-width: 1200px; margin: 20px auto; padding: 20px; background-color: #222; border-radius: 10px;">
+      <!-- Game content loads here -->
+    </div>
+
     <p style="text-align: center; max-width: 600px; margin: 20px auto;">
-        &copy; 3kh0, 2024. All rights reserved. You are welcome to use and/or duplicate material from the <a href="https://github.com/3kh0/3kh0-lite" style="color: #22c55e;">GitHub repository</a> with proper credit to 3kh0.<br /><br />
-        Contact Echo at <a href="mailto:echo-the-coder@tuta.io" style="color: #22c55e;">echo-the-coder@tuta.io</a>.
+      &copy; 3kh0, 2024. All rights reserved. You are welcome to use and/or duplicate material from the <a href="https://github.com/3kh0/3kh0-lite" style="color: #22c55e;">GitHub repository</a> with proper credit to 3kh0.<br /><br />
+      Contact Echo at <a href="mailto:echo-the-coder@tuta.io" style="color: #22c55e;">echo-the-coder@tuta.io</a>.
     </p>
-    <script src="/js/main.js"></script>
-    <script src="/js/subtitle.js"></script>
+
+    <script>
+      // Add event listener to the button
+      document.getElementById('startGameBtn').addEventListener('click', () => {
+        fetch('/projects.html')
+          .then(response => response.text())
+          .then(html => {
+            document.getElementById('gameContainer').innerHTML = html;
+            document.getElementById('gameContainer').style.display = 'block';
+            // Optionally hide the main intro elements
+            document.querySelector('h1').style.display = 'none';
+            document.querySelector('#subtitle').style.display = 'none';
+            document.querySelector('p').style.display = 'none';
+          })
+          .catch(error => {
+            console.error('Error loading projects:', error);
+          });
+      });
+    </script>
   </body>
 </html>
