--- a/index.html
+++ b/index.html
@@ -17,73 +17,19 @@
     <span id="subtitle" style="font-size: 1.5em;">...</span>
     <p style="text-align: center; max-width: 600px; margin: 20px auto;">
       Welcome to 3kh0 lite, a lightweight, lightning fast, and simple game site.<br />
-      <!-- Replace the link with a button for dynamic loading -->
-      <button id="startGameBtn" style="cursor: pointer; background-color: #22c55e; border: none; color: white; padding: 15px 32px; text-align: center; font-size: 16px; border-radius: 20px; margin-top: 20px;">
-        Start playing!
-      </button><br /><br />
+      <!-- Revert to link that navigates to projects.html -->
+      <a href="https://itzjay4kyt.github.io/projects.html" style="text-decoration: none;">
+        <button style="cursor: pointer; background-color: #22c55e; border: none; color: white; padding: 15px 32px; text-align: center; font-size: 16px; border-radius: 20px; margin-top: 20px;">
+          Start playing!
+        </button>
+      </a><br /><br />
       <a href="/misc.html" style="text-decoration: none;">
         <button style="cursor: pointer; background-color: #b625cc; border: none; color: white; padding: 15px 32px; text-align: center; font-size: 16px; border-radius: 20px; margin-top: 5px;">Tools and settings</button>
       </a>
     </p>
-
-    <!-- Container for loaded game content, hidden initially -->
-    <div id="gameContainer" style="display:none; width: 100%; max-width: 1200px; margin: 20px auto; padding: 20px; background-color: #222; border-radius: 10px;">
-      <!-- Loaded game content will appear here -->
-    </div>
-
-    <!-- Optional footer info -->
     <p style="text-align: center; max-width: 600px; margin: 20px auto;">
         &copy; 3kh0, 2024. All rights reserved. You are welcome to use and/or duplicate material from the <a href="https://github.com/3kh0/3kh0-lite" style="color: #22c55e;">GitHub repository</a> with proper credit to 3kh0.<br /><br />
         Contact Echo at <a href="mailto:echo-the-coder@tuta.io" style="color: #22c55e;">echo-the-coder@tuta.io</a>.
     </p>
-
-    <script>
-      // Add event listener for "Start playing!"
-      document.getElementById('startGameBtn').addEventListener('click', () => {
-        console.log('Clicked Start Playing!');
-        fetch('/projects.html')  // Make sure this path is correct
-          .then(response => {
-            if (!response.ok) {
-              throw new Error('Network response was not ok');
-            }
-            return response.text();
-          })
-          .then(html => {
-            console.log('Fetched HTML:', html);
-            // Parse the fetched HTML
-            const parser = new DOMParser();
-            const doc = parser.parseFromString(html, 'text/html');
-
-            // Extract the element with id="game-container"
-            const projectContent = doc.getElementById('game-container');
-            const container = document.getElementById('gameContainer');
-
-            if (projectContent) {
-              // Clear previous content
-              container.innerHTML = '';
-
-              // Clone and append all children from the fetched content
-              Array.from(projectContent.children).forEach(child => {
-                container.appendChild(child.cloneNode(true));
-              });
-
-              // Show the game container
-              container.style.display = 'block';
-
-              // Hide the initial header elements
-              document.querySelector('h1').style.display = 'none';
-              document.querySelector('#subtitle').style.display = 'none';
-              document.querySelector('p').style.display = 'none';
-
-              console.log('Game content loaded successfully.');
-            } else {
-              console.error('No element with id="game-container" found in projects.html');
-            }
-          })
-          .catch(error => {
-            console.error('Error loading projects:', error);
-          });
-      });
-    </script>
   </body>
 </html>
